# examples

./: .gitignore  README.md
app/: layout.tsx  page.tsx
artifacts-cli/: README.md  cli.js  package.json  thesys-mcp-api-call.js  thesys-mcp-api-call.test.js
autogen/: main.py  requirements.txt
boringagents/: package.json  pnpm-lock.yaml
building-chat-with-c1/: README.md  package-lock.json  package.json  pnpm-lock.yaml
c1-artifact/: README.md  env.example  package-lock.json  package.json  pnpm-lock.yaml
c1-artifact-presentation/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
c1-chat/: package-lock.json  package.json  pnpm-lock.yaml
c1-chat-artifact/: README.md  package-lock.json  package.json  pnpm-lock.yaml
c1-custom-component/: README.md  package-lock.json  package.json  pnpm-lock.yaml
c1-custom-components/: .gitignore  README.md  package-lock.json  package.json
c1-template-fastapi/: README.md
c1-viz-data/: README.md  USAGE_EXAMPLES.md  Visualize.md  example.env  package-lock.json  package.json
c1-vizualise-ecommerce-agent/: .gitignore  README.md  example.env  package-lock.json  package.json
chatkit/: .env.example  README.md  package-lock.json  package.json
chatkit/backend/: pyproject.toml
chatkit/backend/app/: __init__.py  main.py  memory_store.py
chatkit/backend/scripts/: run.sh
copilotkit/: README.md  package.json  pnpm-lock.yaml
crewai_genui/: README.md  pyproject.toml
crewai_genui/src/crewai_genui/: crew.py  main.py  thesys_llm.py
custom-chat-ui/: package.json
editable-table/: README.md  (+1 more)
(+388 files in other folders)
